# parallel-computing

./: README.md  q
TP2/: .gitignore  CMakeLists.txt
TP2/include/: sinoscope.h
TP2/source/: color.c  main.c  sinoscope-opencl.c  sinoscope-openmp.c  sinoscope.c
TP2/source/kernel/: sinoscope.cl
TP3/: .clang-format  .gitignore  CMakeLists.txt
TP3/scripts/: heatsim-01.sh  heatsim-02.sh  heatsim-04.sh  heatsim-08.sh  heatsim-12-cart.sh  heatsim-12.sh  heatsim-launch.sh
TP3/source/: heatsim-mpi.c  heatsim.c
